syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message Label {
    string external_id = 1;
    string name = 2;
    optional string description = 3;
    optional int64 created_time = 4;
    optional int64 data_set_id = 5;
}
